Criação do navbar da aplicação, configuração do snipper principal da aplicação

--- a/cli-front/src/app/app.component.html
+++ b/cli-front/src/app/app.component.html
@@ -1,1 +1,8 @@
+<!-- ITENS DA PAGINA -->
 <app-app-body></app-app-body>
+
+<!-- CARREGANDO -->
+<ngx-spinner bdColor="rgba(21,20,20,0.87)" size="medium" color="#9a25a4" type="ball-clip-rotate-pulse"
+  [fullScreen]="true">
+  <p style="color: white"> Carregando... </p>
+</ngx-spinner>
