--- a/cli-front/src/app/app-body/app-body.component.html
+++ b/cli-front/src/app/app-body/app-body.component.html
@@ -1,1 +1,33 @@
-<p>app-body works!</p>
+<div>
+  <!-- NAVBAR -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+    <a class="navbar-brand" [routerLink]="['/']">
+      <img style="margin-left: 25px;" src="../../assets/img/logo_bar.jpg" height="47" alt="">
+    </a>
+    <!-- BOTAO MOBILE -->
+    <button class="navbar-toggler border-0 p-0" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span c lass="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item" [routerLinkActive]="['active']">
+          <a class="nav-link font-weight-bolder">
+            INÍCIO
+          </a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <!-- END NAVBAR -->
+
+  <!-- COMPONENETES -->
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+  </div>
+
+</div>
