--- a/cli-front/src/app/app-login/app-login.component.html
+++ b/cli-front/src/app/app-login/app-login.component.html
@@ -1,1 +1,32 @@
-<p>app-login works!</p>
+<div class="main d-flex align-items-center">
+  <div class="container">
+    <div class="col-xl-5 col-lg-6 col-md-10 col-sm-12 mx-auto">
+      <div class="card border-0">
+        <div class="card-body">
+          <!-- DADOS DO SISTEMA -->
+          <div class="card-title d-flex justify-content-between">
+            <span class="h3 text-primary">LOGIN</span>
+            <span><img src="../../assets/img/logo_bar.jpg" height="30" alt="Logo"></span>
+          </div>
+          <!-- FORMULARIO LOGIN -->
+          <form class="needs-validation" novalidate>
+            <!-- CAMPO USUARIO -->
+            <div class="form-group">
+              <label for="usuario">Usuário</label>
+              <input type="text" aria-describedby="usuarioHelp" class="form-control" Placeholder="Informe seu usuário">
+            </div>
+            <!-- CAMPO SENHA -->
+            <div class="form-group">
+              <label for="senha">Senha</label>
+              <input type="password" aria-describedby="senhaHelp" class="form-control" Placeholder="Informe sua senha">
+            </div>
+            <!-- BTN -->
+            <div>
+              <button class="btn btn-lg btn-block btn-primary">LOGIN</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
