--- a/cli-front/src/styles.scss
+++ b/cli-front/src/styles.scss
@@ -1,1 +1,3 @@
 @import "variables";
+@import "../node_modules/bootstrap/scss/bootstrap";
+@import url("https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap");
