--- a/cli-front/src/app/app-body/app-body.component.html
+++ b/cli-front/src/app/app-body/app-body.component.html
@@ -11,12 +11,20 @@
     </button>
     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item" [routerLinkActive]="['active']">
+        <li class="nav-item" *ngxPermissionsOnly="'acess_home'" [routerLinkActive]="['active']">
           <a class="nav-link font-weight-bolder">
             INÍCIO
           </a>
         </li>
+        <li class="nav-item d-lg-none" [routerLinkActive]="['active']">
+          <a href="javascript:void(0);" class="nav-link font-weight-bolder text-muted"
+            *ngxPermissionsOnly="'acess_home'">SAIR</a>
+        </li>
       </ul>
+    </div>
+    <div class="d-none d-lg-block">
+      <a href="javascript:void(0);" class="nav-link font-weight-bolder text-dark"
+        *ngxPermissionsOnly="'acess_home'">SAIR</a>
     </div>
   </nav>
   <!-- END NAVBAR -->
