--- a/cli-front/src/app/layout/home/home/home.component.html
+++ b/cli-front/src/app/layout/home/home/home.component.html
@@ -1,1 +1,7 @@
-<p>home works!</p>
+<div class="card p-3 shadow-sm border-0 my-4">
+  <div class="d-flex justify-content-between">
+    <h3 class="text-primary">Olá, {{ nmUsuario | titlecase }}.</h3>
+    <span>{{ dtAtual | date: 'dd/MM/yyyy'}}</span>
+  </div>
+  <span><strong>Perfil:</strong> {{ nmProfile }} </span>
+</div>
