Criação do componente Clientes listar

--- a/cli-front/src/app/app-body/app-body.component.html
+++ b/cli-front/src/app/app-body/app-body.component.html
@@ -23,7 +23,7 @@
             Gerenciamento
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarFabrica" *ngxPermissionsOnly="'acess_cliente'">
-            <a [routerLink]="['gerenciamento/cliente']" class="dropdown-item" href="#" [routerLinkActive]="['active']">
+            <a [routerLink]="['gerenciamento/cli']" class="dropdown-item" href="#" [routerLinkActive]="['active']">
               Clientes
             </a>
           </div>
