--- a/cli-front/src/app/layout/gerenciamento/cliente/cli-listar/cli-listar.component.html
+++ b/cli-front/src/app/layout/gerenciamento/cliente/cli-listar/cli-listar.component.html
@@ -2,4 +2,49 @@
     <div class="d-flex justify-content-between">
         <h3 class="text-primary">Clientes</h3>
     </div>
-</div>
+    <!-- DADOS DOS CLIENTES -->
+    <div class="container mt-3" style="overflow-y: auto;">
+        <div class="row">
+            <div class="col-12">
+                <table class="table table-bordered">
+                    <thead>
+                        <tr>
+                            <th scope="col">Nome</th>
+                            <th scope="col">CPF</th>
+                            <th scope="col">Telefone</th>
+                            <th scope="col">Ações</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="content-item">
+                            <th scope="row">Teste</th>
+                            <td>00.000.000/0000-00</td>
+                            <td>(11) 98279-2193</td>
+                            <td>
+                                <button type="button" class="btn btn-primary btn-sm mr-1 mt-1">
+                                    <i class="fas fa-eye"></i>
+                                </button>
+                                <button type="button" class="btn btn-success btn-sm mr-1 mt-1">
+                                    <i class="fas fa-edit"></i>
+                                </button>
+                                <button type="button" class="btn btn-danger btn-sm mr-1 mt-1">
+                                    <i class="fas fa-trash-alt"></i>
+                                </button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+    <!-- BOTOES  -->
+    <div class="container mb-3 mr-3">
+        <div class="row">
+            <div class="col text-right">
+                <button class="btn btn-primary">
+                    Cadastrar
+                    <i class="fas fa-plus-circle"></i>
+                </button>
+            </div>
+        </div>
+    </div>
