--- a/cli-front/src/app/layout/gerenciamento/cliente/cli-listar/cli-listar.component.html
+++ b/cli-front/src/app/layout/gerenciamento/cliente/cli-listar/cli-listar.component.html
@@ -3,7 +3,7 @@
         <h3 class="text-primary">Clientes</h3>
     </div>
     <!-- DADOS DOS CLIENTES -->
-    <div class="container mt-3" style="overflow-y: auto;">
+    <div class="container mt-3" style="overflow-y: auto;" *ngIf="returnedArray?.length > 0">
         <div class="row">
             <div class="col-12">
                 <table class="table table-bordered">
@@ -11,15 +11,17 @@
                         <tr>
                             <th scope="col">Nome</th>
                             <th scope="col">CPF</th>
-                            <th scope="col">Telefone</th>
+                            <th scope="col">E-mail</th>
+                            <th scope="col">Celular</th>
                             <th scope="col">Ações</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr class="content-item">
-                            <th scope="row">Teste</th>
-                            <td>00.000.000/0000-00</td>
-                            <td>(11) 98279-2193</td>
+                        <tr class="content-item" *ngFor="let cliente of returnedArray">
+                            <th scope="row">{{ cliente.nmCliente }}</th>
+                            <td>{{ cliente.email }}</td>
+                            <td>{{ cliente.cpf }}</td>
+                            <td>{{ cliente.telefoneCelular }}</td>
                             <td>
                                 <button type="button" class="btn btn-primary btn-sm mr-1 mt-1">
                                     <i class="fas fa-eye"></i>
@@ -36,6 +38,13 @@
                 </table>
             </div>
         </div>
+    </div>
+    <!-- PAGINACAO -->
+    <pagination class="float-right mb-1" previousText="Anterior" nextText="Próximo" [totalItems]="contentArray?.length"
+        (pageChanged)="pageChanged($event)" *ngIf="contentArray?.length > 10"></pagination>
+    <!-- MENSAGENS TELA -->
+    <div class="alert alert-info mt-3" role="alert" *ngIf="returnedArray?.length == 0 || !returnedArray">
+        Nenhum cliente foi encontrado.
     </div>
     <!-- BOTOES  -->
     <div class="container mb-3 mr-3">
