Criação do formulario de cadastro de clientes

--- a/cli-front/src/_variables.scss
+++ b/cli-front/src/_variables.scss
@@ -17,6 +17,11 @@ body {
   background-size: cover !important;
 }
 
+.camp-ob {
+  color: red;
+  font-size: 0.9em;
+}
+
 $custom-file-text: (
   en: "Browse",
   es: "Elegir",
